@@ -700,17 +700,17 @@ function listingValid(
     $title  = \htmlspecialchars($title, ENT_QUOTES | ENT_HTML5);
     //    $status    = \htmlspecialchars($status);
     $status        = (int)$status;
-    $expire        = \htmlspecialchars($expire, ENT_QUOTES | ENT_HTML5);
+    $expire        = (int)$expire;
     $type          = \htmlspecialchars($type, ENT_QUOTES | ENT_HTML5);
     $desctext      = $myts->displayTarea($desctext, 1, 1, 1);
     $tel           = \htmlspecialchars($tel, ENT_QUOTES | ENT_HTML5);
-    $price         = str_replace([' '], '', $price);
+    $price         = (float)$price;
     $typeprice     = \htmlspecialchars($typeprice, ENT_QUOTES | ENT_HTML5);
     $typecondition = \htmlspecialchars($typecondition, ENT_QUOTES | ENT_HTML5);
     $submitter     = \htmlspecialchars($submitter, ENT_QUOTES | ENT_HTML5);
     $town          = \htmlspecialchars($town, ENT_QUOTES | ENT_HTML5);
     $country       = \htmlspecialchars($country, ENT_QUOTES | ENT_HTML5);
-    $contactby     = \htmlspecialchars($contactby, ENT_QUOTES | ENT_HTML5);
+    $contactby     = (int)$contactby;
     $premium       = \htmlspecialchars($premium, ENT_QUOTES | ENT_HTML5);
     $now           = time();
     $sql           = 'UPDATE '
